k8s/deploy/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/co-co-gong-server:2e93febf54f4b5f622e8d78a7cf4f5f910f092b3
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - port: 8080
  selector:
    app: backend
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: co-co-gong
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`co-co-gong.zerohertz.xyz`)
      kind: Rule
      services:
        - name: backend
          port: 8080
  tls:
    certResolver: zerohertz-resolver
